--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Login</title>
   <link rel="stylesheet" href="css/global.css" />
   <link rel="stylesheet" href="css/login.css" />
-  <script type="module" src="js/auth.js"></script>
+  <script type="module" src="js/auth.js"></script>  
 </head>
 <body>
   <div class="container">
@@ -22,3 +22,91 @@
   </div>
 </body>
 </html>
+
+
+
+<style>
+    body {
+      background: linear-gradient(135deg, #4f8cff 0%, #6ee7b7 100%);
+      min-height: 100vh;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-family: 'Segoe UI', Arial, sans-serif;
+    }
+    .container {
+      background: #fff;
+      padding: 2.5rem 2rem;
+      border-radius: 1.25rem;
+      box-shadow: 0 8px 32px rgba(44, 62, 80, 0.15);
+      width: 100%;
+      max-width: 350px;
+      text-align: center;
+    }
+    .container h1:first-child {
+      margin-bottom: 0.25rem;
+      font-size: 2rem;
+      color: #2563eb;
+      letter-spacing: 1px;
+    }
+    .container h1:last-of-type {
+      margin-bottom: 1.5rem;
+      font-size: 1.1rem;
+      color: #64748b;
+      font-weight: 400;
+      letter-spacing: 0.5px;
+    }
+    #loginForm {
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+    }
+    #loginForm input {
+      padding: 0.75rem;
+      border: 1px solid #d1d5db;
+      border-radius: 0.5rem;
+      font-size: 1rem;
+      transition: border 0.2s;
+    }
+    #loginForm input:focus {
+      border-color: #2563eb;
+      outline: none;
+    }
+    #loginForm button {
+      padding: 0.75rem;
+      border: none;
+      border-radius: 0.5rem;
+      background: #2563eb;
+      color: #fff;
+      font-size: 1rem;
+      font-weight: 600;
+      cursor: pointer;
+      transition: background 0.2s;
+    }
+    #loginForm button[type="button"] {
+      background: #64748b;
+      margin-top: -0.5rem;
+    }
+    #loginForm button:hover {
+      background: #1e40af;
+    }
+    #loginForm button[type="button"]:hover {
+      background: #334155;
+    }
+    a {
+      color: #2563eb;
+      text-decoration: none;
+      font-size: 0.95rem;
+      transition: color 0.2s;
+    }
+    a:hover {
+      color: #1e40af;
+      text-decoration: underline;
+    }
+    #status {
+      margin-top: 1rem;
+      color: #ef4444;
+      min-height: 1.2em;
+      font-size: 0.98rem;
+    }
+  </style>
