--- a/index.html
+++ b/index.html
@@ -1,112 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <title>Login</title>
-  <link rel="stylesheet" href="css/global.css" />
-  <link rel="stylesheet" href="css/login.css" />
-  <script type="module" src="js/auth.js"></script>  
-</head>
-<body>
-  <div class="container">
-    <h1>Login</h1>
-    <h1>Gokul</h1>
-    <form id="loginForm">
-      <input type="email" id="loginEmail" placeholder="Email" required />
-      <input type="password" id="loginPassword" placeholder="Password" required />
-      <button type="submit">Login</button>
-      <button type="button" onclick="guestLogin()">Login as Guest</button>
-    </form>
-    <p><a href="pages/auth/register.html">Create an account</a></p>
-    <p id="status"></p>
-  </div>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Login</title>
+    <link rel="icon" href="assets/global/Gfavicon.svg" type="image/x-icon">
+    <link rel="stylesheet" href="css/global.css" />
+    <link rel="stylesheet" href="css/login.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet"/>
+   
+  </head>
+  <body class="ibm-plex-mono-bold ">
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-md-6">
+          <div class="card mt-5">
+            <div class="card-body">
+              <h2 class="card-title text-center ibm-plex-mono-bold">Login</h2>
+              <form id="loginForm">
+                <div class="mb-3">
+                  <label for="username" class="form-label">Username</label>
+                  <input type="text" class="form-control" id="username" required />
+                </div>
+                <div class="mb-3">
+                  <label for="password" class="form-label">Password</label>
+                  <input type="password" class="form-control" id="password" required />
+                </div>
+                <button type="submit" class="btn btn-primary w-100">Login</button>
+              </form>
+              <p class="mt-3 text-center">Don't have an account? <a href="/register.html">Register here</a></p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"></script>
+     <script type="module" src="js/auth.js"></script>
+  </body>
 </html>
 
-
-
-<style>
-    body {
-      background: linear-gradient(135deg, #4f8cff 0%, #6ee7b7 100%);
-      min-height: 100vh;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      font-family: 'Segoe UI', Arial, sans-serif;
-    }
-    .container {
-      background: #fff;
-      padding: 2.5rem 2rem;
-      border-radius: 1.25rem;
-      box-shadow: 0 8px 32px rgba(44, 62, 80, 0.15);
-      width: 100%;
-      max-width: 350px;
-      text-align: center;
-    }
-    .container h1:first-child {
-      margin-bottom: 0.25rem;
-      font-size: 2rem;
-      color: #2563eb;
-      letter-spacing: 1px;
-    }
-    .container h1:last-of-type {
-      margin-bottom: 1.5rem;
-      font-size: 1.1rem;
-      color: #64748b;
-      font-weight: 400;
-      letter-spacing: 0.5px;
-    }
-    #loginForm {
-      display: flex;
-      flex-direction: column;
-      gap: 1rem;
-    }
-    #loginForm input {
-      padding: 0.75rem;
-      border: 1px solid #d1d5db;
-      border-radius: 0.5rem;
-      font-size: 1rem;
-      transition: border 0.2s;
-    }
-    #loginForm input:focus {
-      border-color: #2563eb;
-      outline: none;
-    }
-    #loginForm button {
-      padding: 0.75rem;
-      border: none;
-      border-radius: 0.5rem;
-      background: #2563eb;
-      color: #fff;
-      font-size: 1rem;
-      font-weight: 600;
-      cursor: pointer;
-      transition: background 0.2s;
-    }
-    #loginForm button[type="button"] {
-      background: #64748b;
-      margin-top: -0.5rem;
-    }
-    #loginForm button:hover {
-      background: #1e40af;
-    }
-    #loginForm button[type="button"]:hover {
-      background: #334155;
-    }
-    a {
-      color: #2563eb;
-      text-decoration: none;
-      font-size: 0.95rem;
-      transition: color 0.2s;
-    }
-    a:hover {
-      color: #1e40af;
-      text-decoration: underline;
-    }
-    #status {
-      margin-top: 1rem;
-      color: #ef4444;
-      min-height: 1.2em;
-      font-size: 0.98rem;
-    }
-  </style>
